Stop-gap to prevent talk widget boxes.

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -76,3 +76,5 @@ ul.slugtree {
 }
 
 li.selected { background: #8888ff;}
+
+.WidgetBoxContent { overflow:auto; max-height: 500pt; }
